--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
   ],
   "autoload": {
     "psr-4": {
-      "Ikarus\\SPS\\PostClient\\" : "src"
+      "Ikarus\\SPS\\" : "src"
     }
   },
   "require" : {
